sessions/27-service-mesh/subsessions/04-traffic-management/01-message-board-virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: message-board
  namespace: app-ingress
spec:
  hosts:
    - message-board.example.com
  gateways:
    - message-board-gateway
  http:
    - match:
        - uri:
            prefix: /api/users
      route:
        - destination:
            host: user-service
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend
            port:
              number: 80
